css - stop the header links wrapping over multiple lines

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ img {
 
 nav a {
   padding-right: 1em;
+  display: inline-block;
 }
 
 a:link {
